Bug 161595 - Unable to load/save configuration. Wrong permissions on home folder? not able to sent a message to newsgroups, i can seen the postings (error: Unable to load/save configuration. Wrong permissions on home folder? You should close KNode now to avoid dat...
Summary: Unable to load/save configuration. Wrong permissions on home folder? not able...
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-04 12:01 UTC by heelstraf
Modified: 2009-09-19 21:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description heelstraf 2008-05-04 12:01:40 UTC
Version:           0.99.01 (using KDE 4.0.3)
Installed from:    SuSE RPMs
OS:                Linux

i can't post to all the newsgroups.
i can see the postings, and fletch the headers.

the same problem with new account 
or the ~/.kde/share/apps/knode folder to copy to ~/.kde4/share/apps/knode

error message from gui:
Unable to load/save configuration.
Wrong permissions on home folder?
You should close KNode now to avoid data loss.
Comment 1 heelstraf 2008-08-17 23:55:24 UTC
The original summary for this bug was longer than 255 characters, and so it was truncated when Bugzilla was upgraded. The original summary was:

Unable to load/save configuration. Wrong permissions on home folder? not able to sent a message to newsgroups, i can seen the postings  (error: Unable to load/save configuration. Wrong permissions on home folder? You should close KNode now to avoid data loss.)
Comment 2 Michael Leupold 2009-03-28 12:02:26 UTC
SVN commit 945792 by mleupold:

Fix use of KStandardDirs:
- use appdata instead of data wherever possible
- replace KStandardDirs::locateLocal("data", "knode/")+"otherdir/" by KStandardDirs::locateLocal("data", "knode/otherdir/") as this fixes auto-creating otherdir if it doesn't
exist yet.

BUG: 161595

 M  +3 -3      knaccountmanager.cpp  
 M  +4 -3      knarticlefilter.cpp  
 M  +2 -2      knconfig.cpp  
 M  +2 -2      knconvert.cpp  
 M  +2 -2      knfiltermanager.cpp  
 M  +1 -1      knfolder.cpp  
 M  +3 -3      knfoldermanager.cpp  
 M  +1 -1      knnntpaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945792
Comment 3 Michael Leupold 2009-03-28 13:51:20 UTC
SVN commit 945846 by mleupold:

Backport of r945792 to the 4.2 branch.

Fix use of KStandardDirs:
- use appdata instead of data wherever possible
- replace KStandardDirs::locateLocal("data", "knode/")+"otherdir/" by KStandardDirs::locateLocal("data", "knode/otherdir/") as this fixes auto-creating otherdir if it doesn't 
exist yet.

CCBUG: 161595


 M  +3 -3      knaccountmanager.cpp  
 M  +4 -3      knarticlefilter.cpp  
 M  +2 -2      knconfig.cpp  
 M  +2 -2      knconvert.cpp  
 M  +2 -2      knfiltermanager.cpp  
 M  +1 -1      knfolder.cpp  
 M  +3 -3      knfoldermanager.cpp  
 M  +1 -1      knnntpaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945846
Comment 4 Bernd Schubert 2009-09-19 21:29:01 UTC
Happens here with knode from kde-4.3:

Version: 4:4.3.1-0ubuntu1

Unable to load/save configuration.
Wrong permissions on home folder?
You should close KNode now to avoid data loss.