Fix use of KStandardDirs: - use appdata instead of data wherever possible - replace KStandardDirs::locateLocal("data", "knode/")+"otherdir/" by KStandardDirs::locateLocal("data", "knode/otherdir/") as this fixes auto-creating otherdir if it doesn't exist yet.

BUG: 161595

svn path=/trunk/KDE/kdepim/knode/; revision=945792