knode/knarticlefilter.cpp
@@ -75,7 +75,8 @@ KNArticleFilter::~KNArticleFilter()
 bool KNArticleFilter::loadInfo()
 {
   if (i_d!=-1) {
-    QString fname(KStandardDirs::locate("data",QString( "knode/filters/%1.fltr" ).arg(i_d) ) );
+    QString fname( KStandardDirs::locate( "data",
+                                          QString( "knode/filters/%1.fltr" ).arg( i_d ) ) );
 
     if (fname.isNull())
       return false;
@@ -95,7 +96,7 @@ bool KNArticleFilter::loadInfo()
 
 void KNArticleFilter::load()
 {
-  QString fname(KStandardDirs::locate("data",QString( "knode/filters/%1.fltr").arg(i_d) ) );
+  QString fname(KStandardDirs::locate( "data", QString( "knode/filters/%1.fltr" ).arg( i_d ) ) );
 
   if (fname.isNull())
     return;
@@ -137,7 +138,7 @@ void KNArticleFilter::save()
 {
   if (i_d==-1)
     return;
-  QString dir(KStandardDirs::locateLocal("data","knode/")+"filters/");
+  QString dir( KStandardDirs::locateLocal( "data", "knode/filters/" ) );
   if (dir.isNull()) {
     KNHelper::displayInternalFileError();
     return;
